--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -44,7 +44,7 @@ jobs:
         if: steps.restore-cache.outputs.cache-hit != 'true'
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19.2
+          go-version: "1.20.6"
         id: go
 
       - name: Generate code
@@ -191,7 +191,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19.2
+          go-version: "1.20.6"
         id: go
 
       - name: Restore cache
@@ -394,7 +394,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19.2
+          go-version: "1.20.6"
         id: go
 
       - name: Generate uniquifying value
@@ -496,7 +496,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19.2
+          go-version: "1.20.6"
         id: go
 
       - name: Generate uniquifying value
