remove goprintffuncname linter temporary until Fmt is gone

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,7 +18,8 @@ linters:
     - gofmt
     - goimports
     - gomnd
-    - goprintffuncname
+    # temporary disable for Fmt until we remove this func
+    #- goprintffuncname
     - gosec
     - gosimple
     - govet
