lakectl cmd split part 2b

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,8 +18,7 @@ linters:
     - gofmt
     - goimports
     - gomnd
-    # temporary disable for Fmt until we remove this func
-    #- goprintffuncname
+    - goprintffuncname
     - gosec
     - gosimple
     - govet
