Apply suggestions from code review
Co-authored-by: Ariel Shaqed (Scolnicov) <ariels@treeverse.io>

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         Thank you for contributing to the lakeFS project.
-        For us to properly address your issue, please fill in the following fields.
+        The following fields help us properly address your issue:
   - type: textarea
     id: what-happened
     attributes:
