--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -6,18 +6,13 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## Hello Axolotl!
-        **Thank you for contributing to the lakeFS project.**
-        We appreciate the time you invest in filing a bug report and created this template to help make this process easier.
-        It's really important to have all the information and context, to ensure we can properly address your issue. 
-        Please use the following references to fill out the bug report.
+        Thank you for contributing to the lakeFS project.
+        The following fields help us properly address your issue:
   - type: textarea
     id: what-happened
     attributes:
       label: What happened?
-      description: Also tell us, what did you expect to happen?
-      value: |  
-        Current Behavior:
+      value: |
         What actually happened, including error codes if applies.
                 
         Steps to Reproduce:
@@ -29,45 +24,44 @@ body:
   - type: textarea
     id: expected-behavior
     attributes:
-      label: Expected Behavior
+      label: Expected behavior
       description: What did you expect to happen?
-      value: |  
-        Expected Behavior:
-        How you expected thing to work.
+      placeholder: |  
+        Expected behavior:
     validations:
       required: false
   - type: input
     id: lakefs_version
     attributes:
-      label: lakeFS Version
+      label: lakeFS version
       description: What version of lakeFS are you running?
   - type: input
     id: deployment
     attributes:
-      label: Deplyoment
-      description: lakeFS deployment type
-      placeholder: ex. AWS ECS, Docker or Kubernetes, helm-chart, local
+      label: How lakeFS is installed
+      description: How and where you installed lakeFS
+      placeholder: ex. AWS EC2, Docker or Kubernetes, locally
     validations:
       required: false
   - type: input
     id: clients
     attributes:
-      label: Affected Clients
-      description: If applicable provide lakeFS client and version that was used
-      placeholder: ex. hadoop-lakefs 0.1.10, python lakefs-client 0.89.0
+      label: Affected clients
+      description: If applicable, provide the lakeFS client and version that was used
+      placeholder: Python lakeFS client 0.89.0
     validations:
       required: false
   - type: textarea
     id: logs
     attributes:
-      label: Relevant logs output
-      description: Please copy and paste any relevant log output (lakeFS, clients, ecosystem). Make sure to scrub anything confidential! These will typically be near strings such as `secret`, `access` or `AKIA`
+      label: Relevant log output
+      description: Please copy and paste any relevant log output (server/client).
       render: shell
   - type: input
     id: contact
     attributes:
-      label: Contact Details
+      label: Contact details
       description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      placeholder: email@example.com
     validations:
       required: false
