--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -208,7 +208,7 @@ jobs:
         id: restore-cache
         with:
           path: ${{ github.workspace }}/test/spark/metaclient
-          key: metadata-client--hadoop3-${{ hashFiles('./clients/spark/**') }}
+          key: metadata-client-core-${{ hashFiles('./clients/spark/**') }}
 
       - name: GC test
         run: |
