Trigger on PR closure
Current action isn't firing when PR is closed so `teardown` isn't working for surge.sh

--- a/.github/workflows/docs-pr.yaml
+++ b/.github/workflows/docs-pr.yaml
@@ -2,6 +2,7 @@ name: Docs Preview and Link Check
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, closed]
     paths:
       - "docs/**"
     branches:
