--- a/esti/ops/docker-compose-win.yaml
+++ b/esti/ops/docker-compose-win.yaml
@@ -37,7 +37,7 @@ services:
       POSTGRES_USER: lakefs
       POSTGRES_PASSWORD: lakefs
   esti:
-    image: "golang:1.20.6-alpine3.18"
+    image: "golang:1.21.0-windowsservercore-ltsc2022"
     links:
       - lakefs:s3.local.lakefs.io
       - lakefs:testmultipartupload.s3.local.lakefs.io
