--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -1006,7 +1006,7 @@ jobs:
   run-lakectl-aws-s3-windows:
     name: Test latest lakeFS app on AWS S3 on Windows
     needs: [ gen-code, deploy-image ]
-    runs-on: windows-2022
+    runs-on: ubuntu-20.04
     env:
       TAG: ${{ needs.deploy-image.outputs.tag }}
       # Setting Account_ID as a secret as a way to avoid specifying it here
@@ -1022,11 +1022,10 @@ jobs:
         run: echo "value=$RANDOM" >> $GITHUB_OUTPUT
 
       - name: Test lakeFS with S3 tests
-        uses: ./.github/actions/bootstrap-test-lakefs-win
+        uses: ./.github/actions/bootstrap-test-lakefs
         with:
-          compose-file: docker-compose.yaml
+          compose-file: esti/ops/docker-compose-win.yaml
           compose-flags: "--quiet-pull --exit-code-from=esti"
-          compose-directory: esti\ops
         env:
           LAKEFS_BLOCKSTORE_TYPE: s3
           LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID: ${{ secrets.ESTI_AWS_ACCESS_KEY_ID }}
@@ -1041,7 +1040,7 @@ jobs:
           ESTI_VERSION: ${{ steps.version.outputs.tag }}
 
       - name: Check files in S3 bucket
-        shell: pwsh
+        shell: bash
         run: |
           FILES_COUNT=`aws s3 ls s3://esti-system-testing/${{ github.run_number }}/${{ steps.unique.outputs.value }} --recursive | wc -l`
           [ $FILES_COUNT -gt 5 ]
@@ -1049,13 +1048,13 @@ jobs:
       - name: lakeFS Logs on s3 failure
         if: ${{ failure() }}
         continue-on-error: true
-        shell: pwsh
-        run: docker-compose -f esti\ops\docker-compose.yaml logs --tail=1000 lakefs
+        shell: bash
+        run: docker-compose -f esti/ops/docker-compose-win.yaml logs --tail=1000 lakefs
 
       - name: Export DB
         if: ${{ always() }}
-        working-directory: esti\ops
-        shell: pwsh
+        working-directory: esti/ops
+        shell: bash
         run: |
           if docker-compose ps -q postgres; then
             docker-compose exec -T postgres pg_dumpall --username=lakefs | gzip | aws s3 cp - s3://esti-system-testing/${{ github.run_number }}/${{ steps.unique.outputs.value }}/dump.gz
