--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -186,7 +186,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19.2
+          go-version: "1.20.6"
         id: go
 
       - name: Generate uniquifying value
