--- a/.github/workflows/python-api-client.yaml
+++ b/.github/workflows/python-api-client.yaml
@@ -4,7 +4,7 @@ on:
   release:
     types: [released]
   workflow_dispatch:
-    inputs: 
+    inputs:
       tag:
         description: Tag/version to publish
         required: true
@@ -28,12 +28,20 @@ jobs:
     - name: Python build and make package
       run: make package-python PACKAGE_VERSION=${{ steps.version.outputs.tag }}
 
-    - name: Python publish package
+    - name: Python client publish package
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
         packages_dir: clients/python/dist/
+        verbose: true
+
+    - name: Python SDK publish package
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        packages_dir: clients/python/sdk/dist/
         verbose: true
 
     - name: Extract docs version
