add api/swagger back to pull request triggered opanapi workflow paths and change it to test

--- a/.github/workflows/openapi-compatibility-tests.yaml
+++ b/.github/workflows/openapi-compatibility-tests.yaml
@@ -2,6 +2,8 @@ name: lakeFS OpenAPI Compatibility Tests
 
 on:
   pull_request:
+    paths:
+      - "api/**"
   push:
     branches:
       - master
