remove github workflow dbt run

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -556,7 +556,7 @@ jobs:
         run: docker-compose logs --tail=1000
 
   metastore-client-with-trino:
-    name: Test metastore client commands using trino and dbt
+    name: Test metastore client commands using trino
     needs: [gen-code, deploy-image]
     runs-on: ubuntu-20.04
     env:
@@ -585,14 +585,6 @@ jobs:
           context: test/lakectl_metastore/hive
           cache-from: type=gha,scope=hive-metastore
           cache-to: type=gha,mode=max,scope=hive-metastore
-      - name: Build and Push dbt
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ghcr.io/treeverse/dbt:${{ needs.deploy-image.outputs.tag }}
-          context: test/lakectl_metastore/dbt
-          cache-from: type=gha,scope=dbt
-          cache-to: type=gha,mode=max,scope=dbt
       - name: Start lakeFS for Metastore tests
         uses: ./.github/actions/bootstrap-test-lakefs
         with:
@@ -608,8 +600,6 @@ jobs:
           LAKEFS_BLOCKSTORE_S3_CREDENTIALS_SECRET_ACCESS_KEY: ${{ secrets.ESTI_AWS_SECRET_ACCESS_KEY }}
           LAKECTL_METASTORE_GLUE_CREDENTIALS_ACCESS_KEY_ID: ${{ secrets.ESTI_AWS_ACCESS_KEY_ID }}
           LAKECTL_METASTORE_GLUE_CREDENTIALS_ACCESS_SECRET_KEY: ${{ secrets.ESTI_AWS_SECRET_ACCESS_KEY }}
-      - name: Build lakectl for dbt container
-        run: go build -o test/lakectl_metastore/etc/lakectl ./cmd/lakectl
 
       - name: Setup lakeFS for tests
         working-directory: test/lakectl_metastore
@@ -617,25 +607,11 @@ jobs:
           STORAGE_NAMESPACE: s3://esti-system-testing/${{ github.run_number }}-metaclient/${{ steps.unique.outputs.value }}
         run: ./setup-test.sh
 
-      - name: Test using DBT and lakectl metastore commands
-        env:
-          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-          REPOSITORY: gateway-test
-          SONNET_JAR: sonnets-311/target/sonnets-311/scala-2.12/sonnets-311_2.12-0.1.0.jar
-        working-directory: test/lakectl_metastore
-        run: docker-compose run dbt
-
       - name: lakeFS Logs on Spark with gateway failure
         if: ${{ failure() }}
         continue-on-error: true
         working-directory: test/lakectl_metastore
         run: docker-compose logs --tail=2500 lakefs
-
-      - name: dbt Logs with failure
-        if: ${{ failure() }}
-        continue-on-error: true
-        working-directory: test/lakectl_metastore
-        run: docker-compose logs --tail=1000 dbt
 
   build-spark3-metadata-client:
     name: Build metadata client for Spark 3.x
