--- a/clients/hadoopfs/pom.xml
+++ b/clients/hadoopfs/pom.xml
@@ -194,8 +194,8 @@ To export to S3:
                                             <shadedPattern>io.lakefs.hadoop.shade.gsonfire</shadedPattern>
                                         </relocation>
                                         <relocation>
-                                            <pattern>io.lakefs.clients.api</pattern>
-                                            <shadedPattern>io.lakefs.hadoop.shade.api</shadedPattern>
+                                            <pattern>io.lakefs.clients.sdk</pattern>
+                                            <shadedPattern>io.lakefs.hadoop.shade.sdk</shadedPattern>
                                         </relocation>
                                     </relocations>
                                     <transformers>
@@ -276,7 +276,7 @@ To export to S3:
     <dependencies>
         <dependency>
             <groupId>io.lakefs</groupId>
-            <artifactId>api-client-v1</artifactId>
+            <artifactId>sdk-client</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
