disable CI for swagger (until we reach version 1.0)

--- a/.github/workflows/openapi-breaking-changes.yaml
+++ b/.github/workflows/openapi-breaking-changes.yaml
@@ -1,12 +1,12 @@
 name: lakeFS OpenAPI Compatibility Tests
 
 on:
-  pull_request:
-    paths:
-      - "api/**"
-  push:
-    branches:
-      - master
+#  pull_request:
+#    paths:
+#      - "api/**"
+#  push:
+#    branches:
+#      - master
   workflow_dispatch: {}
 
 jobs:
