Reduce logs (they were doubled) and configure S3A to avoid a warning

--- a/clients/hadoopfs/src/test/resources/log4j.properties
+++ b/clients/hadoopfs/src/test/resources/log4j.properties
@@ -4,5 +4,8 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
-log4j.logger.io.lakefs=DEBUG, A1
+log4j.logger.io.lakefs=DEBUG
 
+# Comment this out to show mockserver INFO logs.  They will help you debug
+# MockServer expectations and results.
+log4j.logger.org.mockserver.log=WARN
