Instruct Linguist to fold clients/java-legacy in GitHub
Now changes to this subdirectory will appear folded by default in PRs.

--- a/clients/.gitattributes
+++ b/clients/.gitattributes
@@ -1,5 +1,6 @@
-java/**		linguist-generated
-python/**	linguist-generated
-python/Gemfile linguist-generated=false
-python/Gemfile.lock linguist-generated=false
-python/_config.yml linguist-generated=false
+java/**			linguist-generated
+java-legacy/**		linguist-generated
+python/**		linguist-generated
+python/Gemfile		linguist-generated=false
+python/Gemfile.lock	linguist-generated=false
+python/_config.yml	linguist-generated=false
