--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -110,6 +110,7 @@ jobs:
             type=s3,region=us-east-1,bucket=lakefs-docker-cache,name=lakefs
           cache-to: |
             type=s3,region=us-east-1,bucket=lakefs-docker-cache,name=lakefs,mode=max
+
   login-to-amazon-ecr:
     runs-on: ubuntu-latest
     needs: [check-secrets]
@@ -124,6 +125,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
+        with:
+          mask-password: 'false'
     outputs:
       registry: ${{ steps.login-ecr.outputs.registry }}
       docker_username: ${{ steps.login-ecr.outputs.docker_username_977611293394_dkr_ecr_us_east_1_amazonaws_com }}
