--- a/clients/hadoopfs/pom.xml
+++ b/clients/hadoopfs/pom.xml
@@ -93,7 +93,7 @@ To export to S3:
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.12.4</version>
+                        <version>3.1.2</version>
                         <configuration>
                             <systemPropertyVariables>
                                 <lakefs.access_mode>presigned</lakefs.access_mode>
@@ -231,7 +231,7 @@ To export to S3:
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>3.1.2</version>
                 <configuration>
                     <excludes>
                         <exclude>${exclude.tests}</exclude>
@@ -368,11 +368,24 @@ To export to S3:
 	</dependency>
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <!-- "inline" currently required in order to mock constructor calls. -->
-            <artifactId>mockito-inline</artifactId>
-            <version>3.10.0</version>
-	    <scope>test</scope>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-junit-rule-no-dependencies</artifactId>
+            <version>5.14.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.2-jre</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
