--- a/.github/workflows/python-api-client.yaml
+++ b/.github/workflows/python-api-client.yaml
@@ -33,7 +33,7 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: clients/python/dist/
+        packages_dir: clients/python-legacy/dist/
         verbose: true
 
     - name: Python SDK publish package
@@ -41,7 +41,7 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: clients/python/sdk/dist/
+        packages_dir: clients/python/dist/
         verbose: true
 
     - name: Extract docs version
@@ -57,9 +57,28 @@ jobs:
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        working-directory: clients/python
+        working-directory: clients
         ruby-version: '2.7'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+    - name: Build release as latest
+      working-directory: clients/python-legacy
+      run: bundle exec jekyll build -d _site -b /
+
+    - name: Build release ${{ steps.docver.outputs.tag }}
+      working-directory: clients/python-legacy
+      run: bundle exec jekyll build -d _site/${{ steps.docver.outputs.tag }} -b /${{ steps.docver.outputs.tag }}
+
+    - name: Publish to docs repository
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
+      with:
+        source_file: clients/python-legacy/_site/.
+        destination_repo: treeverse/docs-lakefs-python
+        destination_folder: /
+        user_email: 'support@treeverse.io'
+        user_name: 'python-docs-action'
 
     - name: Build release as latest
       working-directory: clients/python
@@ -75,7 +94,7 @@ jobs:
         API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
       with:
         source_file: clients/python/_site/.
-        destination_repo: treeverse/docs-lakefs-python
+        destination_repo: treeverse/docs-lakefs-sdk-python
         destination_folder: /
         user_email: 'support@treeverse.io'
         user_name: 'python-docs-action'
