--- a/clients/hadoopfs/pom.xml
+++ b/clients/hadoopfs/pom.xml
@@ -194,8 +194,8 @@ To export to S3:
                                             <shadedPattern>io.lakefs.hadoop.shade.gsonfire</shadedPattern>
                                         </relocation>
                                         <relocation>
-                                            <pattern>io.lakefs.clients.api</pattern>
-                                            <shadedPattern>io.lakefs.hadoop.shade.api</shadedPattern>
+                                            <pattern>io.lakefs.clients.sdk</pattern>
+                                            <shadedPattern>io.lakefs.hadoop.shade.sdk</shadedPattern>
                                         </relocation>
                                     </relocations>
                                     <transformers>
@@ -276,8 +276,9 @@ To export to S3:
     <dependencies>
         <dependency>
             <groupId>io.lakefs</groupId>
-            <artifactId>api-client</artifactId>
-            <version>0.109.0</version>
+            <!-- TODO(ariels): Publish an actual sdk-client version and use *that*! -->
+            <artifactId>sdk-client</artifactId>
+            <version>0.111.2-RC.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
