--- a/clients/java/pom.xml
+++ b/clients/java/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.lakefs</groupId>
-    <artifactId>sdk-client</artifactId>
+    <artifactId>sdk</artifactId>
     <packaging>jar</packaging>
-    <name>sdk-client</name>
+    <name>sdk</name>
     <version>0.1.0-SNAPSHOT</version>
     <url>https://lakefs.io</url>
     <description>lakeFS OpenAPI Java client</description>
