--- a/.github/workflows/python-api-client.yaml
+++ b/.github/workflows/python-api-client.yaml
@@ -25,25 +25,6 @@ jobs:
         fi
       id: version
 
-    - name: Python build and make package
-      run: make package-python PACKAGE_VERSION=${{ steps.version.outputs.tag }}
-
-    - name: Python legacy SDK legacy publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: clients/python-legacy/dist/
-        verbose: true
-
-    - name: Python SDK publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: clients/python/dist/
-        verbose: true
-
     - name: Extract docs version
       shell: bash
       run: |
@@ -61,24 +42,16 @@ jobs:
         ruby-version: '2.7'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-    - name: Build legacy release as latest
-      working-directory: clients/python-legacy
-      run: bundle exec jekyll build -d _site -b /
+    - name: Python build and make legacy and new packages
+      run: make package-python PACKAGE_VERSION=${{ steps.version.outputs.tag }}
 
-    - name: Build legacy release ${{ steps.docver.outputs.tag }}
-      working-directory: clients/python-legacy
-      run: bundle exec jekyll build -d _site/${{ steps.docver.outputs.tag }} -b /${{ steps.docver.outputs.tag }}
-
-    - name: Publish legacy to docs repository
-      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
-      env:
-        API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
+    - name: Python SDK publish package
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        source_file: clients/python-legacy/_site/.
-        destination_repo: treeverse/docs-lakefs-python
-        destination_folder: /
-        user_email: 'support@treeverse.io'
-        user_name: 'python-docs-action'
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        packages_dir: clients/python/dist/
+        verbose: true
 
     - name: Build release as latest
       working-directory: clients/python
@@ -95,6 +68,33 @@ jobs:
       with:
         source_file: clients/python/_site/.
         destination_repo: treeverse/docs-lakefs-sdk-python
+        destination_folder: /
+        user_email: 'support@treeverse.io'
+        user_name: 'python-docs-action'
+
+    - name: Python legacy SDK legacy publish package
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        packages_dir: clients/python-legacy/dist/
+        verbose: true
+
+    - name: Build legacy release as latest
+      working-directory: clients/python-legacy
+      run: bundle exec jekyll build -d _site -b /
+
+    - name: Build legacy release ${{ steps.docver.outputs.tag }}
+      working-directory: clients/python-legacy
+      run: bundle exec jekyll build -d _site/${{ steps.docver.outputs.tag }} -b /${{ steps.docver.outputs.tag }}
+
+    - name: Publish legacy to docs repository
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
+      with:
+        source_file: clients/python-legacy/_site/.
+        destination_repo: treeverse/docs-lakefs-python
         destination_folder: /
         user_email: 'support@treeverse.io'
         user_name: 'python-docs-action'
