--- a/.github/workflows/python-api-client.yaml
+++ b/.github/workflows/python-api-client.yaml
@@ -25,6 +25,17 @@ jobs:
         fi
       id: version
 
+    - name: Python build and make legacy and new packages
+      run: make package-python-sdk PACKAGE_VERSION=${{ steps.version.outputs.tag }}
+
+    - name: Python SDK publish package
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        packages_dir: clients/python/dist/
+        verbose: true
+
     - name: Extract docs version
       shell: bash
       run: |
@@ -38,20 +49,9 @@ jobs:
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        working-directory: clients
+        working-directory: clients/python
         ruby-version: '2.7'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-
-    - name: Python build and make legacy and new packages
-      run: make package-python PACKAGE_VERSION=${{ steps.version.outputs.tag }}
-
-    - name: Python SDK publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        packages_dir: clients/python/dist/
-        verbose: true
 
     - name: Build release as latest
       working-directory: clients/python
@@ -71,7 +71,24 @@ jobs:
         destination_folder: /
         user_email: 'support@treeverse.io'
         user_name: 'python-docs-action'
+  deploy-legacy:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      # Extract the version to 'version' based on workflow_dispatch or triggered tag in the published event
+    - name: Extract version
+      shell: bash
+      run: |
+        if [ "${{ github.event.inputs.tag }}" != "" ]; then
+          echo "tag=$(echo ${{ github.event.inputs.tag }} | sed s/^v//)" >> $GITHUB_OUTPUT
+        else
+          echo "tag=$(echo ${GITHUB_REF##*/} | sed s/^v//)" >> $GITHUB_OUTPUT
+        fi
+      id: version
 
+    - name: Python build and make legacy and new packages
+      run: make package-python-client PACKAGE_VERSION=${{ steps.version.outputs.tag }}
     - name: Python legacy SDK legacy publish package
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
@@ -79,6 +96,23 @@ jobs:
         password: ${{ secrets.PYPI_API_TOKEN }}
         packages_dir: clients/python-legacy/dist/
         verbose: true
+
+    - name: Extract docs version
+      shell: bash
+      run: |
+        if [ "${{ github.event.inputs.tag }}" != "" ]; then
+          echo "tag=$(echo ${{ github.event.inputs.tag }} | cut -d. -f1-2)" >> $GITHUB_OUTPUT
+        else
+          echo "tag=$(echo ${GITHUB_REF##*/} | cut -d. -f1-2)" >> $GITHUB_OUTPUT
+        fi
+      id: docver
+
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        working-directory: clients/python-legacy
+        ruby-version: '2.7'
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
     - name: Build legacy release as latest
       working-directory: clients/python-legacy
