Use io.lakefs:sdk coordinates
Also revert *Esti* to use a published SDK from Maven central.  Previously it
was temporarily building its own SDK copy.

Fixes #6730.

--- a/clients/hadoopfs/pom.xml
+++ b/clients/hadoopfs/pom.xml
@@ -277,8 +277,8 @@ To export to S3:
         <dependency>
             <groupId>io.lakefs</groupId>
             <!-- TODO(ariels): Publish an actual sdk-client version and use *that*! -->
-            <artifactId>sdk-client</artifactId>
-            <version>0.111.2-RC.0</version>
+            <artifactId>sdk</artifactId>
+            <version>0.112.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
