--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -33,6 +33,8 @@ jobs:
           go-version: "1.20.6"
         id: go
 
+      - uses: bufbuild/buf-setup-action@v1.27.0
+
       - name: Extract version
         shell: bash
         run: |
