--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,3 +2,4 @@ source 'https://rubygems.org'
 gem 'github-pages', group: :jekyll_plugins
 gem 'just-the-docs'
 gem "webrick", "~> 1.8"
+gem 'jekyll-sitemap'
