--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,6 +27,10 @@ defaults:
       path: ""
     values:
       image: https://docs.lakefs.io/assets/img/docs_logo.png
+  - scope:
+      path: "assets/**"
+    values:
+      sitemap: false
 
 # general config
 repository: treeverse/lakeFS
