Proporal: use Buf CLI to compile our proto files (#6784)
* update plugin and makefile

* Align makefile dependency name from proto to gen-proto

* update docs

* Setup buf cli to build for proto validation

* Updated buf action and use go to execute buf cli

--- a/.github/workflows/docker-publish-exp-image.yaml
+++ b/.github/workflows/docker-publish-exp-image.yaml
@@ -43,6 +43,8 @@ jobs:
           go-version: "1.20.6"
         id: go
 
+      - uses: bufbuild/buf-setup-action@v1.27.1
+
       - name: Extract version
         shell: bash
         run: echo "tag=$(echo $(git describe --abbrev=1 --tags)-$(echo ${{ inputs.name }}))" >> $GITHUB_OUTPUT
