--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
         with:
           go-version: "1.20.6"
         id: go
+      - uses: bufbuild/buf-setup-action@v1.27.1
       - name: Generate code
         env:
           NODE_OPTIONS: "--max-old-space-size=4096"
