--- a/.github/workflows/close-stale-issues.yaml
+++ b/.github/workflows/close-stale-issues.yaml
@@ -25,4 +25,5 @@ jobs:
         exempt-issue-labels: 'no stale'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         ascending: true
-        start-date: "2021-07-31"
+        start-date: "2021-01-31"
+        operations-per-run: 150
