docs: trigger docs build on docs-* workflow changes

--- a/.github/workflows/docs-latest.yaml
+++ b/.github/workflows/docs-latest.yaml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - "docs/**"
+      - ".github/workflows/docs-*.yaml"
     branches:
       - master
   workflow_dispatch:
