docs: update robots.txt with full docs url

--- a/.github/workflows/docs-latest.yaml
+++ b/.github/workflows/docs-latest.yaml
@@ -29,6 +29,10 @@ jobs:
         working-directory: docs
         run: bundle exec jekyll build --config _config.yml -d _site/
 
+      - name: Update robots.txt
+        working-directory: docs/_site
+        run: "sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io/' robots.txt"
+
       - name: Publish to docs repository
         uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
         env:
