--- a/.github/workflows/docs-pr.yaml
+++ b/.github/workflows/docs-pr.yaml
@@ -30,6 +30,10 @@ jobs:
         working-directory: docs
         run: bundle exec jekyll build --config _config.yml -d _site/ --verbose
 
+      - name: Update robots.txt
+        working-directory: docs/_site
+        run: "sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io/' robots.txt"
+
       - name: Overlay PR message on each page
         working-directory: docs/_site
         run: |
