Upgrade to use Go v1.21.3

--- a/esti/ops/docker-compose-external-db.yaml
+++ b/esti/ops/docker-compose-external-db.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   lakefs:
     image: "${REPO:-treeverse}/lakefs:${TAG:-dev}"
@@ -28,9 +28,9 @@ services:
       - AZURE_CLIENT_ID
       - AZURE_CLIENT_SECRET
       - AZURE_TENANT_ID
-    entrypoint: [ "/app/lakefs", "run" ]
+    entrypoint: ["/app/lakefs", "run"]
   esti:
-    image: "golang:1.20.6-alpine3.18"
+    image: "golang:1.21.3-alpine3.18"
     links:
       - lakefs:s3.local.lakefs.io
       - lakefs:testmultipartupload.s3.local.lakefs.io
@@ -73,4 +73,3 @@ volumes:
       type: none
       device: ${LAKEFS_ROOT:-.}
   lakefs-app:
-
