--- a/esti/ops/docker-compose-dynamodb.yaml
+++ b/esti/ops/docker-compose-dynamodb.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   lakefs:
     image: "${REPO:-treeverse}/lakefs:${TAG:-dev}"
@@ -27,13 +27,13 @@ services:
       - LAKEFS_DATABASE_DYNAMODB_AWS_REGION=us-east-1
       - LAKEFS_DATABASE_DYNAMODB_AWS_ACCESS_KEY_ID=AKIAIO5FODNN7EXAMPLE
       - LAKEFS_DATABASE_DYNAMODB_AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K3MDENG/bPxRfiCYEXAMPLEKEY
-    entrypoint: [ "/app/lakefs", "run" ]
+    entrypoint: ["/app/lakefs", "run"]
   dynamodb:
     image: "amazon/dynamodb-local:1.18.0"
     ports:
       - "6432:8000"
   esti:
-    image: "golang:1.20.6-alpine3.18"
+    image: "golang:1.21.3-alpine3.18"
     links:
       - lakefs:s3.local.lakefs.io
       - lakefs:testmultipartupload.s3.local.lakefs.io
@@ -77,4 +77,3 @@ volumes:
       type: none
       device: ${LAKEFS_ROOT:-.}
   lakefs-app:
-
